Hello tuesday! Start only using the stuff we really need, not the ui stuff.